# random-service

./: Dockerfile  README.md  setup.py
.docker/: Dockerfile.now  entrypoint.sh
.scripts/: db-init.js  nginx.location.conf
docs/: error.md
random-service-py/: Dockerfile  setup.py
random-service-py/random_service/: __init__.py  __main__.py  app.py  auth.py  random_bill.py
random-service-py/random_service/templates/: certbot-au  install
random-service-rs/: Cargo.toml
random-service-rs/src/: db.rs  error.rs  main.rs  state.rs
random-service-rs/src/app/: auth.rs  mod.rs
random_service/: __main__.py  app.py
random_service/static/: dns_core.sh  tun
random_service/templates/: certbot-cleanup  default  default.sh  domain.sh  install  install.sh  subdomain.sh  update.sh
