[package]
name = "random-service-rs"
version = "0.1.0"
authors = ["Johann Lee <me@qinka.pro>"]
edition = "2018"

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
serde_yaml = "^0.8"
argparse = "^0.2"
env_logger = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
failure = "^0.1"
bson = "^0.14"
r2d2 = "^0.8"
r2d2-mongodb = "^0.2"
uuid = { version = "^0.5", features = ["serde", "v4"] }
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"